[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/weapon/bullet.png" type="Texture" id=1]
[ext_resource path="res://weapon/Bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/bullet_hit.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 2 )

[node name="Bullet" type="KinematicBody2D" groups=[
"bullet",
]]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fire"
anims/fire = SubResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
process_mode = 0
wait_time = 8.0
autostart = true

[node name="HitDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2081

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetect"]
shape = SubResource( 3 )

[node name="FireAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0
pitch_scale = 0.8
autoplay = true

[node name="CollisionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="body_entered" from="HitDetect" to="." method="_on_HitDetect_body_entered"]
